--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -10,7 +10,7 @@
     {{ super() }}
     {% endblock %}
     
-        <h1 class="title">Journaly</h1>
+        <!-- <h1 class="title font-sans">Journaly</h1> -->
     </div>
 </div>
 
