--- a/flaskr/templates/add_journal/add_journal.html
+++ b/flaskr/templates/add_journal/add_journal.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 <div class="layout-3">
-    <h1 class="subtitle">Sign Up</h1>
+    <h1 class="subtitle">Write Journal</h1>
     <div class="white-style">
         {% if current_user.is_authenticated %}
         <form method="POST" enctype="multipart/form-data" class="form-style">
