--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -28,7 +28,11 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/static/css/public/style.css">
     <!-- <link rel="stylesheet" href="/static/css/base.css"> -->
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=La+Belle+Aurore&family=Zeyada&display=swap" rel="stylesheet">
+            
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/static/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/static/favicon/apple-icon-60x60.png">
@@ -51,7 +55,7 @@
     <title>Journaly</title>
 </head>
 
-<body class="bg-gray-100 text-gray-700" id="top">
+<body class="bg-gray-100" id="top">
     {% block content %}
 
     {% block header %}
