--- a/flaskr/templates/user/user.html
+++ b/flaskr/templates/user/user.html
@@ -61,7 +61,7 @@
                         {% for journal in journals %}
                         {% if like_journal.from_user_id == current_user.id and like_journal.to_journal_id == journal.id %}
                         <div class="img-size">
-                            <a href="{{ url_for('jounal.journal', _anchor=journal.title) }}">
+                            <a href="{{ url_for('journal.journal', _anchor=journal.title) }}">
                                 <img src="{{ url_for('static', filename=journal.picture_path) }}" class="transform-scale shadow-lg">
                             </a>
                             <p class="small font-semibold mt-2">{{ journal.country }}</p>
