--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -55,7 +55,7 @@
     <title>Journaly</title>
 </head>
 
-<body class="bg-gray-100" id="top">
+<body class="bg-gray-100" id="top" style="background-image: url(/static/image/paper2.jpeg);">
     {% block content %}
 
     {% block header %}
