--- a/flaskr/templates/search/search.html
+++ b/flaskr/templates/search/search.html
@@ -17,7 +17,7 @@
                 {{form.csrf_token}}
                 <div class="search-wrap">
                     <h6 class="search-bar">
-                        {{render_field(form.keyword, class="h-full input-form mt-0 py-2", placeholder="Let's find your city pop!")}}
+                        {{render_field(form.keyword, class="h-full input-form mt-0 py-2", placeholder="Let's search with location name")}}
                     </h6>
                     <h6 class="mt-4 md:mt-0">
                         {{form.submit(class="h-full btn-blue py-2")}}
@@ -32,27 +32,14 @@
                     <div class="wrap-full-style">
                     {% set isMatched = {'isMatched':False} %}
 
-                    {% for album in albums %}
-                        {% if form.keyword.data.lower() in album.name.lower() or form.keyword.data.lower() in album.title.lower() %}
+                    {% for journal in journals %}
+                        {% if form.keyword.data.lower() in journal.country.lower() or form.keyword.data.lower() in journal.city.lower() %}
                         <div class="img-size m-2">
-                            <a href="{{ url_for('history.history', _anchor=album.name) }}">
-                                <img src="{{ url_for('static', filename=album.album_picture_path) }}" class="transform-scale shadow-lg">
+                            <a href="{{ url_for('journal.journal', _anchor=journal.id) }}">
+                                <img src="{{ url_for('static', filename=journal.picture_path) }}" class="transform-scale shadow-lg">
                             </a>
-                            <p class="small font-semibold mt-2">{{ album.name }}</p>
-                            <p class="small mt-1">{{ album.title }}</p>
-                        </div>
-                        {% if isMatched.update({'isMatched':True}) %}{% endif %}
-                        {% endif %}
-                    {% endfor %}
-
-                    {% for artist in artists %}
-                        {% if form.keyword.data.lower() in artist.name.lower() or form.keyword.data.lower() in artist.title.lower() %}
-                        <div class="img-size m-2">
-                            <a href="{{ url_for('artist.artist', _anchor=artist.name) }}">
-                                <img src="{{ url_for('static', filename=artist.song_picture_path) }}" class="transform-scale shadow-lg">
-                            </a>
-                            <p class="small font-semibold mt-2">{{ artist.name }}</p>
-                            <p class="small mt-1">{{ artist.title }}</p>
+                            <p class="font-semibold mt-2">{{ journal.city }}, {{ journal.country }}</p>
+                            <p class="small mt-1">{{ journal.title }}</p>
                         </div>
                         {% if isMatched.update({'isMatched':True}) %}{% endif %}
                         {% endif %}
