--- a/flaskr/templates/user/user.html
+++ b/flaskr/templates/user/user.html
@@ -13,7 +13,7 @@
     
         <div class="user-style">
             {% if current_user.is_authenticated %}
-            <h1 class="subtitle font-sans">Hello, {{current_user.username}}</h1>
+            <h1 class="subtitle">Hello, {{current_user.username}}</h1>
             <div class="white-style">
                 <div class="w-full text-center">
                     <h6>
@@ -53,7 +53,7 @@
                     {% endif %}
 
                     <h6 class="mt-8 lg:mt-16">
-                        Your Favorite Journal
+                        Your Favorite Journals
                     </h6>
                     <div class="wrap-style">                 
                     {% set isLiked = {'isLiked':False} %}
@@ -64,7 +64,7 @@
                             <a href="{{ url_for('journal.journal', _anchor=journal.title) }}">
                                 <img src="{{ url_for('static', filename=journal.picture_path) }}" class="transform-scale shadow-lg">
                             </a>
-                            <p class="small font-semibold mt-2">{{ journal.country }}</p>
+                            <p class="font-semibold mt-2">{{ journal.city }}, {{ journal.country }}</p>
                             <p class="small mt-1">{{ journal.title }}</p>
                         </div>
                         {% if isLiked.update({'isLiked':True}) %}{% endif %}
