--- a/flaskr/templates/search/search.html
+++ b/flaskr/templates/search/search.html
@@ -7,9 +7,7 @@
     {{ super() }}
     {% endblock %}
 
-    {% block bg %}
-    {{ super() }}
-    {% endblock %}
+    <div class="bg-style border">
        
     <div class="layout-2">
             <h1 class="subtitle">Search</h1>
@@ -53,6 +51,8 @@
             </div>
             {% endif %}
         </div>
+    </div>
+
     </div>
 </div>
 
