--- a/flaskr/templates/contact/contact.html
+++ b/flaskr/templates/contact/contact.html
@@ -5,18 +5,15 @@
     {% block header %}
     {{ super() }}
     {% endblock %}
-
-    {% block bg %}
-    {{ super() }}
-    {% endblock %}
+    <div class="bg-style border">
     
         <div class="text-center">
             <h1 class="text-4xl mb-8">THANK YOU</h1>
-            <h1 class="sub-subtitle font-normal mb-4">feel free to contact me</h1>
+            <h1 class="sub-subtitle font-normal mb-4">Feel free to contact me</h1>
             <h1 class="sub-subtitle mb-8">
                 <small>
                     <a href="https://ayumitanaka.net">https://ayumitanaka.net</a>
-                    <br>&copy; 2021 ✨ <a href="https://ayumitanaka.net">Ayumi Tanaka</a>
+                    <br>&copy; 2021  <a href="https://ayumitanaka.net">Ayumi Tanaka</a>
                     <br>All Rights Reserved
                 </small>
             </h1>
@@ -26,6 +23,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
