--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -8,14 +8,14 @@
     {% endblock %}
 
     
-    <div class="grid grid-cols-4 gap-4 w-full h-full border-4 py-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 w-full h-full border-4 py-4">
 
         <div class="w-full text-gray-900 text-center absolute top-1/2 left-0 z-10">
             <h1 class="title">Journaly</h1>
             <h5 class="mt-10">Go on a journey, Write a journal.</h5>
         </div>
 
-        <div class="border">
+        <div class="border hidden sm:block">
             <div class="flex justify-center w-full h-2/3 bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md opacity-60" style="background-image:url(/static/image/vancouver_7.jpg)">
                 <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-8">
                 <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-        <div class="border flex items-end">
+        <div class="border hidden lg:flex items-end">
             <div class="flex justify-center w-full h-2/3 bg-no-repeat bg-cover bg-center relative transform rotate-2 border-8 border-yellow-50 rounded shadow-md opacity-60" style="background-image:url(/static/image/vancouver_7.jpg)">
                 <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-8">
                 <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <div class="border">
+        <div class="border hidden lg:block">
             <div class="flex justify-center w-full h-2/3 bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md opacity-60" style="background-image:url(/static/image/vancouver_7.jpg)">
                 <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-8">
                 <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
@@ -47,19 +47,8 @@
             </div>
         </div>
         
-        <div class="border flex items-end">
-        <!-- <div class="border flex flex-wrap content-between"> -->
-
-            <!-- <div class="flex justify-center w-full h-1/2 bg-no-repeat bg-cover bg-center relative transform -rotate-3 border-8 border-yellow-50 rounded shadow-md opacity-60" style="background-image:url(/static/image/vancouver_2.jpg)">
-                <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-8">
-                <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
-                    <h1 class="text-4xl text-center">
-                        Sunset in Vancouver
-                    </h1>
-                </div>
-            </div> -->
-
-            <div class="flex justify-center w-full h-2/3 bg-no-repeat bg-cover bg-center relative transform rotate-2 border-8 border-yellow-50 rounded shadow-md opacity-60" style="background-image:url(/static/image/vancouver_7.jpg)">
+        <div class="border flex items-center sm:items-end">
+            <div class="flex justify-center w-full h-5/6 sm:h-2/3 bg-no-repeat bg-cover bg-center relative transform rotate-2 border-8 border-yellow-50 rounded shadow-md opacity-60" style="background-image:url(/static/image/vancouver_7.jpg)">
                 <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-8">
                 <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
                     <h1 class="text-4xl text-center">
