--- a/flaskr/templates/journal/journal.html
+++ b/flaskr/templates/journal/journal.html
@@ -12,13 +12,13 @@
     <div class="h-screen flex flex-wrap items-center border">
 
     <!-- <div class="border  w-full h-5/6 p-4 shadow-md" id="{{ journal.id }}"> -->
-    <div class="border w-full h-5/6 p-4 shadow-md bg-no-repeat bg-cover bg-center rounded" style="background-image: url(/static/image/paper6.png);" id="{{ journal.id }}">
-        <div class="border-2  w-full h-2/3 flex justify-center relative">
+    <div class="border w-full h-full sm:h-5/6 lg:h-full xl:h-5/6 my-0 lg:my-4 shadow-md bg-no-repeat bg-cover bg-center rounded" style="background-image: url(/static/image/paper6.png);" id="{{ journal.id }}">
+        <div class="border-2  w-full h-1/2 2xl:h-2/3 flex justify-center relative">
             <!-- <h1 class="absolute top-0 left-0" style="writing-mode: vertical-rl;">
                 {{ journal.start_date.strftime('%Y. %m. %d') }} - {{ journal.end_date.strftime('%Y. %m. %d') }}
             </h1> -->
             <div class="flex justify-center w-5/6 h-full bg-no-repeat bg-cover bg-center relative transform -rotate-2 border-8 border-yellow-50 rounded shadow-md" style="background-image:url({{url_for('static', filename=journal.picture_path)}})">
-                <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-14">
+                <img src="/static/image/tape.png" alt="" class="w-2/5 absolute -top-2 md:-top-14">
                 <div class="w-full h-1/5 flex items-center justify-center absolute bottom-0 bg-yellow-50">
                     <h1 class="text-4xl text-center">
                         {{ journal.title }}
@@ -32,13 +32,13 @@
                 </h1>
             </div>
         </div>
-        <div class="flex items-center border-2 w-full h-1/3 p-2 rounded">
+        <div class="flex items-center border-2 w-full h-1/2 2xl:h-1/3 p-2 rounded">
         <!-- <div class="flex items-center border-2  w-full h-1/3 p-2 rounded bg-cover bg-no-repeat bg-center" style="background-image: url(/static/image/paper.jpeg);"> -->
             <div>
                 <h1>
                     {{ journal.start_date.strftime('%Y. %m. %d') }} - {{ journal.end_date.strftime('%Y. %m. %d') }}
                 </h1>
-                <p class="text-lg">
+                <p class="2xl:text-lg">
                     {{ journal.comment }}
                 </p>
     
