--- a/flaskr/templates/login/login.html
+++ b/flaskr/templates/login/login.html
@@ -7,9 +7,7 @@
     {{ super() }}
     {% endblock %}
     
-    {% block bg %}
-    {{ super() }}
-    {% endblock %}
+    <div class="bg-style border">
        
         <div class="layout-3">
             <h1 class="subtitle">Login</h1>
