--- a/flaskr/templates/signup/signup.html
+++ b/flaskr/templates/signup/signup.html
@@ -6,10 +6,8 @@
     {% block header %}
     {{ super() }}
     {% endblock %}
-
-    {% block bg %}
-    {{ super() }}
-    {% endblock %}
+    
+    <div class="bg-style border">
     
         <div class="layout-3">
             <h1 class="subtitle">Sign Up</h1>
