--- a/flaskr/templates/user/user.html
+++ b/flaskr/templates/user/user.html
@@ -22,7 +22,7 @@
                             {% if current_user.picture_path %}
                             <img src="{{ url_for('static', filename=current_user.picture_path) }}" class="icon-style border-4">
                             {% else %}
-                            <img src="/static/image/logoa.jpg" class="icon-style border-4">
+                            <img src="/static/image/logo2.png" class="icon-style border-4">
                             {% endif %}
                         </div>
                     </div>
