--- a/flaskr/static/css/src/style.css
+++ b/flaskr/static/css/src/style.css
@@ -66,7 +66,7 @@
         @apply inline-block hover:opacity-75 duration-300;
     }
     .btn-toggle {
-        @apply flex items-center bg-transparent hover:bg-blue-500 focus:outline-none border rounded duration-300 py-2 px-3;
+        @apply flex items-center bg-transparent hover:bg-orange focus:outline-none border-gray-700 rounded duration-300 py-2 px-3;
     }
     /* history.html */
     .albums-style {
@@ -218,7 +218,7 @@
         @apply w-3/4 sm:w-2/3 text-gray-700;
     }
     .icon-style {
-        @apply rounded-full border-2 md:border-4 border-blue-500;
+        @apply rounded-full border-2 md:border-4 border-orange;
     }
     .layout-2 {
         @apply w-4/5 xl:w-3/5 2xl:w-1/2;
